# HelloAgents

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  requirements_memory.txt  setup.py
.github/workflows/: ci.yml  test.yml
HelloAgents/: README.md  optimized_structure.md
HelloAgents/core/: executor.py  llms.py  requirements.txt  sample_agent1.py  tool.py
docs/: circuit-breaker-guide.md
docs/api/: index.md
docs/api/memory/: index.md
docs/tutorials/: quickstart.md
examples/: chapter07_basic_setup.py  chapter07_output.txt  chapter08_memory_rag.py  claw2claw_receipts_demo.py  fastapi_sse_server.py
feat/: evaluate_with_llm_judge.py  evaluate_with_win_rate.py  universal_evaluator_guide.md
hello_agents/: __init__.py  version.py
hello_agents/agents/: __init__.py  function_call_agent.py  plan_solve_agent.py  react_agent.py  reflection_agent.py  simple.py  simple_agent.py
hello_agents/context/: builder.py
hello_agents/core/: agent.py  config.py  exceptions.py  llm.py  llm_adapters.py  message.py
hello_agents/evaluation/: __init__.py
hello_agents/evaluation/benchmarks/: __init__.py
hello_agents/evaluation/benchmarks/bfcl/: evaluator.py
hello_agents/memory/: __init__.py  base.py  embedding.py
hello_agents/memory/core/: __init__.py  manager.py  retriever.py  store.py
hello_agents/memory/rag/: __init__.py  embeddings.py  pipeline.py  retriever.py
hello_agents/memory/storage/: __init__.py  document_store.py  graph_store.py  neo4j_store.py  qdrant_store.py  storage_manager.py  vector_store.py
hello_agents/memory/types/: __init__.py  episodic.py  perceptual.py  semantic.py  working.py
hello_agents/protocols/a2a/: implementation.py
hello_agents/rl/: __init__.py  rewards.py
hello_agents/tools/: __init__.py  base.py  registry.py
hello_agents/tools/builtin/: __init__.py  calculator.py  file_tools.py  gaia_evaluation_tool.py  llm_judge_evaluation_tool.py  llm_judge_tool.py  mcp_wrapper_tool.py  memory_tool.py  note_tool.py  protocol_tools.py  rag_tool.py  search.py  search_tool.py  todowrite_tool.py  web_browser.py  win_rate_evaluation_tool.py  win_rate_tool.py
hello_agents/utils/: parameter_converter.py
test/: AIME_llmjudge1.py  AIME_winrate1.py  evaluate_with_llm_judge.py  evaluate_with_win_rate.py  generated_data_simple.json  reference_data_rich.json
test/evaluation_results/: scene_a_math.json  scene_a_math_win_rate.json
tests/: __init__.py  conftest.py  test_all_agents.py  test_config.py  test_import.py  test_llm_function_calling.py  test_simple_agent.py  test_tool_schema.py  test_tools.py
tests/test_agents/: __init__.py
tests/test_core/: test_llm.py
(+6 files in other folders)
